Kubernetes/media/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose -f ./compose.yaml convert
    kompose.version: 1.34.0 (cbf2835db)
    traefik.enable: "true"
    traefik.http.routers.qbittorrent.middlewares: crowdsec,default-headers,auth
    traefik.http.services.qbittorrent.loadbalancer.server.port: "8080"
  labels:
    io.kompose.service: qbittorrent
  name: qbittorrent
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: qbittorrent
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose -f ./compose.yaml convert
        kompose.version: 1.34.0 (cbf2835db)
        traefik.enable: "true"
        traefik.http.routers.qbittorrent.middlewares: crowdsec,default-headers,auth
        traefik.http.services.qbittorrent.loadbalancer.server.port: "8080"
      labels:
        io.kompose.service: qbittorrent
    spec:
      containers:
        - env:
            - name: DOCKER_MODS
              value: ghcr.io/vuetorrent/vuetorrent-lsio-mod:latest
            - name: TZ
              value: Europe/Warsaw
            - name: UMASK
              value: "002"
          image: linuxserver/qbittorrent:5.1.2
          name: qbittorrent
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /config/qBittorrent
              name: qbittorrent-claim0
            - mountPath: /data
              name: qbittorrent-claim1
      restartPolicy: Always
      volumes:
        - name: qbittorrent-claim0
          persistentVolumeClaim:
            claimName: qbittorrent-claim0
        - name: qbittorrent-claim1
          persistentVolumeClaim:
            claimName: qbittorrent-claim1
