Kubernetes/media/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose -f ./compose.yaml convert
    kompose.version: 1.34.0 (cbf2835db)
    traefik.enable: "true"
    traefik.http.routers.qbittorrent.middlewares: crowdsec,default-headers,auth
    traefik.http.services.qbittorrent.loadbalancer.server.port: "8080"
  labels:
    io.kompose.service: qbittorrent
  name: qbittorrent
  namespace: media
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: qbittorrent
