Kubernetes/media/qbittorrent/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`^download\.(.+)`)
      kind: Rule
      observability:
        accessLogs: true
      services:
        - name: qbittorrent
          port: 8080
